fix DAVE-457